# RobotLab-Cpp-Training-2022

./: .gitignore  CMakeLists.txt  Makefile  README.md
Argument/: CMakeLists.txt  argument.cpp
Array/: CMakeLists.txt  array.cpp
BasicIO/: CMakeLists.txt
DataType/: CMakeLists.txt  datatype.cpp
Function/: CMakeLists.txt  function.cpp
Header/: CMakeLists.txt  func.cpp  func.h  main.cpp
Hello/: CMakeLists.txt  hello.cpp
Ifelse/: CMakeLists.txt  ifelse-1.cpp  ifelse-2.cpp
Loop/: CMakeLists.txt  dowhileloop.cpp  forloop.cpp  loop.cpp  whileloop.cpp
Namespace/: CMakeLists.txt  namespace.cpp
Operator/: CMakeLists.txt  operator-1.cpp  operator-3.cpp
Pointer/: CMakeLists.txt  pointer-1.cpp  pointer-2.cpp
Switchcase/: CMakeLists.txt  switchcase-1.cpp  switchcase-2.cpp
basicIO/: CMakeLists.txt  basicIO-1.cpp  basicIO-2.cpp
docker/: Dockerfile
test/: update_log.md
test/q1/: cfg.py  q1.md  testcase_generator.py
test/q1/example_testcase/: 0.in  1.in  2.in  3.in  3.out
test/q1/testcase/: 1.in  11.in  12.in  17.in  18.in  20.in  29.in  3.in  35.in  36.in  37.in  38.in  4.in  7.in
test/q2/: 7000.csv  cfg.py  q2.md  testcase_generator.py  unknown.txt
test/q2/example_testcase/: 0.in  0.out  1.in  1.out
test/q2/testcase/: 0.in  0.out  1.in  1.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  (+86 more)
test/q3/: q3.md
test/q4/: cfg.py  q4.md  testcase_generator.py
test/q5/: cfg.py  q5.md  testcase_generator.py
test/q6/: cfg.py  q6.md  testcase_generator.py
test/sol/: CMakeLists.txt  cfg.py  compare.py  result.xlsx  solve.md
(+575 files in other folders)
