cmake_minimum_required(VERSION 2.8)

project(RobotLab-Cpp-Training-2022)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++11")

add_subdirectory(Hello)
add_subdirectory(DataType)
add_subdirectory(BasicIO)
add_subdirectory(Operator)
add_subdirectory(Ifelse)
add_subdirectory(Switchcase)
add_subdirectory(Loop)
add_subdirectory(Function)
add_subdirectory(Array)
add_subdirectory(Namespace)
add_subdirectory(Header)
add_subdirectory(Argument)